--- a/src/style.css
+++ b/src/style.css
@@ -3,16 +3,35 @@
 
 body {
     height: 100vh;
+    width: 100vw;
     margin: 0;
     font-family: 'Noto Sans', sans-serif;
+    display: grid;
+    grid-template-columns: 280px 1fr;
 }
 
 .side-bar {
     background-color: #e6e6e6;
-    width: 280px;
+}
+
+.workspace {
+    background-color: #ffe6e6;
     height: 100%;
+    width: fit-content(100%);
 }
 
 h1 {
     margin: 0;
 }
+
+
+/* PROJECT FORM */
+.project-form {
+    background-color: rgb(242, 242, 242);
+    height: 100px;
+    position: absolute;
+    justify-self: center;
+    align-self: center;
+}
+
+.hide { display: none; }
