--- a/src/style.css
+++ b/src/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .workspace {
-    background-color: #ffe6e6;
+    background-color: #fff;
     height: 100%;
     width: fit-content(100%);
 }
@@ -27,7 +27,7 @@ h1 {
 
 /* PROJECT FORM */
 .project-form {
-    background-color: rgb(242, 242, 242);
+    background-color: #fff;
     height: 100px;
     position: absolute;
     justify-self: center;
@@ -35,3 +35,10 @@ h1 {
 }
 
 .hide { display: none; }
+
+.screen-gate {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #9c9c9c3e;
+}
