--- a/src/style.css
+++ b/src/style.css
@@ -7,20 +7,27 @@ body {
     margin: 0;
     font-family: 'Noto Sans', sans-serif;
     display: grid;
-    grid-template-columns: 260px 1fr 340px;
+    grid-template-columns: 290px 1fr 380px;
 }
 
 .side-bar {
-    background-color: #e6e6e6;
+    background-color: #2b343b;
+    padding: 15px;
 }
 
 .workspace {
     background-color: #fff;
     height: 100%;
     width: fit-content(100%);
+    padding: 20px 80px;
 }
 
 h1 {
+    margin: 0;
+}
+
+h2 {
+    color: #fff;
     margin: 0;
 }
 
@@ -65,6 +72,12 @@ h1 {
 .completed-todo .todo-title {
     text-decoration: line-through;
 }
+
+.none-priority { color: #bababa; }
+.low-priority { color: #2ecd6f; }
+.normal-priority { color: #6fddfe; }
+.high-priority { color: #fecc00; }
+.urgent-priority { color: #f50000; }
 
 /* EDIT BAR */
 .edit-bar {
