--- a/src/style.css
+++ b/src/style.css
@@ -139,6 +139,7 @@ a.delete-project:hover {
 }
 
 #project-name-input {
+    width: 100%;
     padding: 2px;
     border: 1px solid #2b343b;
     border-radius: 3px;
